docs: checkstyle 및 google java format 설정법